binrw/tests/ui/invalid_if_condition.stderr
error[E0308]: mismatched types
 --> $DIR/invalid_if_condition.rs:5:13
  |
5 |     #[br(if("wrong type"))]
  |             ^^^^^^^^^^^^ expected `bool`, found `&str`
